TODO: testing hosted.yml.j2

--- a/templates/proxies.yml.j2
+++ b/templates/proxies.yml.j2
@@ -1,4 +1,4 @@
-{% for proxy_default in proxy_defaults %}
+{# {% for proxy_default in proxy_defaults %}
 {% for key, value in proxy_default.items() %}
 nexus_repos_{{ key }}_proxy:
 {% for team in teams %}
@@ -29,4 +29,4 @@ nexus_repos_{{ key }}_proxy:
 {% endfor %}
 {% endfor %}
 {% endfor %}
-{% endfor %}
+{% endfor %} #}
