--- a/templates/hosted.yml.j2
+++ b/templates/hosted.yml.j2
@@ -1,34 +1,41 @@
 {% for key, value in hosted_defaults.items() %}
-nexus_repos_{{ key }}_hosted:
+{% set hadData = false %}
 {% for team in teams %}
 {% for team_hosted_repo in team.repos.requestedBy.hosted | selectattr("format", "equalto", key) %}
-  - repositoryName: {{ team_hosted_repo.name }}
+{% if team_hosted_repo|length > 0 and hadData == false %}
+{% if key == 'maven2' %}
+nexus_repos_{{ key[:-1] }}_hosted:
+{% else %}
+nexus_repos_{{ key }}_hosted:
+{% endif %}
+{% set hadData = true %}
+{% endif %}
+  - name: {{ team_hosted_repo.name }}
     recipeName: {{ key }}
     online: {{ team_hosted_repo.online if team_hosted_repo.online is defined else value.online }}
-    storage:
-      blobStoreName: {{ team_hosted_repo.blob if team_hosted_repo.blob is defined else value.storage.blobStoreName }}
-      writePolicy: {{ team_hosted_repo.writePolicy if team_hosted_repo.writePolicy is defined else value.storage.writePolicy }}
-    cleanup:
+    blob_store: {{ team_hosted_repo.blob_store if team_hosted_repo.blob_store is defined else value.blob_store }}
+    layout_policy: {{ team_hosted_repo.layout_policy if team_hosted_repo.layout_policy is defined else value.layout_policy }}
+    write_policy: {{ team_hosted_repo.write_policy if team_hosted_repo.write_policy is defined else value.write_policy }}
+    cleanup_policies:
 {% if team.policy is defined %}
 {% for policy in team.cleanup_policies %}
       - {{ policy }}
 {% endfor %}
 {% else %}
 {% for policy in value.cleanup_policies %}
-      - {{ policy }}
+    - {{ policy }}
 {% endfor %}
 {% endif %}
 {% if key == 'apt' %}
     distribution: {{ team_hosted_repo.distribution if team_hosted_repo.distribution is defined else value.distribution }}
-    aptSigning:
-      keypair: {{ team_hosted_repo.keypair if team_hosted_repo.keypair is defined else value.aptSigning.keypair }}
-      passphrase: {{ team_hosted_repo.passphrase if team_hosted_repo.passphrase is defined else value.aptSigning.passphrase }}
+    keypair: {{ team_hosted_repo.keypair if team_hosted_repo.keypair is defined else value.keypair }}
+    passphrase: {{ team_hosted_repo.passphrase if team_hosted_repo.passphrase is defined else value.passphrase }}
 {% endif %}
 {% if key == 'docker' %}
-    forceBasicAuth: {{ team_hosted_repo.forceBasicAuth if team_hosted_repo.forceBasicAuth is defined else value.forceBasicAuth }}
-    v1Enabled: {{ team_hosted_repo.v1Enabled if team_hosted_repo.v1Enabled is defined else value.v1Enabled }}
-    httpPort: {{ team_hosted_repo.httpPort if team_hosted_repo.httpPort is defined else value.httpPort }}
-    subdomain: {{ team_hosted_repo.subdomain if team_hosted_repo.subdomain is defined else value.subdomain }}
+    force_basic_auth: {{ team_hosted_repo.force_basic_auth if team_hosted_repo.force_basic_auth is defined else value.force_basic_auth }}
+    v1_enabled: {{ team_hosted_repo.v1_enabled if team_hosted_repo.v1_enabled is defined else value.v1_enabled }}
+    http_port: {{ team_hosted_repo.http_port if team_hosted_repo.http_port is defined else value.http_port }}
+    sub_domain: {{ team_hosted_repo.sub_domain if team_hosted_repo.sub_domain is defined else value.sub_domain }}
 {% endif %}
 {% if key == 'raw' %}
     contentDisposition: {{ team_hosted_repo.contentDisposition if team_hosted_repo.contentDisposition is defined else value.contentDisposition }}
