--- a/templates/proxies.yml.j2
+++ b/templates/proxies.yml.j2
@@ -1,32 +1,59 @@
-{# {% for proxy_default in proxy_defaults %}
-{% for key, value in proxy_default.items() %}
-nexus_repos_{{ key }}_proxy:
+{% for key, value in proxy_defaults.items() %}
 {% for team in teams %}
-{% for default in value %}
-  - name: {{ team.name }}
-    format: {{ team.format }}
-    online: {{ default.online }}
-    blocked: {{ default.blocked }}
-    auto_block: {{ default.auto_block }}
+{% for team_proxy_repo in team.repos.requestedBy.proxy | selectattr("format", "equalto", key) %}
+{% if team_proxy_repo|length > 0 and loop.first %}
+{% if key == 'maven2' %}
+nexus_repos_{{ key[:-1] }}_proxy:
+{% else %}
+nexus_repos_{{ key }}_proxy:
+{% endif %}
+{% endif %}
+  - name: {{ team_proxy_repo.name }}
+    recipeName: {{ key }}
+    online: {{ team_proxy_repo.online if team_proxy_repo.online is defined else value.online }}
+    blob_store: {{ team_proxy_repo.blob_store if team_proxy_repo.blob_store is defined else value.blob_store }}
+    layout_policy: {{ team_proxy_repo.layout_policy if team_proxy_repo.layout_policy is defined else value.layout_policy }}
+    write_policy: {{ team_proxy_repo.write_policy if team_proxy_repo.write_policy is defined else value.write_policy }}
+    blocked: {{ team_proxy_repo.blocked if team_proxy_repo.blocked is defined else value.blocked }}
+    auto_block: {{ team_proxy_repo.auto_block if team_proxy_repo.auto_block is defined else value.auto_block }}
     remote:
-      username: {{ default.remote.username }}
-      password: {{ default.remote.password }}
-    remoteUrl: {{ default.remote.url }}
+      username: {{ team_proxy_repo.remote.username if team_proxy_repo.remote.username is defined else value.remote.username }}
+      password: {{ team_proxy_repo.remote.password if team_proxy_repo.remote.password is defined else value.remote.password }}
+    remote_url: {{ team_proxy_repo.remote_url if team_proxy_repo.remote_url is defined else value.remote.url }}
     connection:
-      useTrustStore: {{ default.connection.useTrustStore }}
-      retries: {{ default.connection.retries }}
-      user_agent_suffix: {{ default.connection.user_agent_suffix }}
-      enable_cookies: {{ default.connection.enable_cookies }}
-      enable_circular_redirects: {{ default.connection.enable_circular_redirects }}
-      timeout: {{ default.connection.timeout }}
-    maximum_component_age: {{ default.maximum_component_age }}
-    maximum_metadata_age: {{ default.maximum_metadata_age }}
-    negative_cache_enabled: {{ default.negative_cache_enabled }}
-    negative_cache_ttl: {{ default.negative_cache_ttl }}
+      retries: {{ team_proxy_repo.connection.retries if team_proxy_repo.connection.retries is defined else value.connection.retries }}
+      user_agent_suffix: {{ team_proxy_repo.connection.user_agent_suffix if team_proxy_repo.connection.user_agent_suffix is defined else value.connection.user_agent_suffix }}
+      enable_cookies: {{ team_proxy_repo.connection.enable_cookies if team_proxy_repo.connection.enable_cookies is defined else value.connection.enable_cookies }}
+      enable_circular_redirects: {{ team_proxy_repo.connection.enable_circular_redirects if team_proxy_repo.connection.enable_circular_redirects is defined else value.connection.enable_circular_redirects }}
+      timeout: {{ team_proxy_repo.connection.timeout if team_proxy_repo.connection.timeout is defined else value.connection.timeout }}
+    maximum_component_age: {{ team_proxy_repo.maximum_component_age if team_proxy_repo.maximum_component_age is defined else value.maximum_component_age }}
+    maximum_metadata_age: {{ team_proxy_repo.maximum_metadata_age if team_proxy_repo.maximum_metadata_age is defined else value.maximum_metadata_age }}
+    negative_cache_enabled: {{ team_proxy_repo.negative_cache_enabled if team_proxy_repo.negative_cache_enabled is defined else value.negative_cache_enabled }}
+    negative_cache_ttl: {{ team_proxy_repo.negative_cache_ttl if team_proxy_repo.negative_cache_ttl is defined else value.negative_cache_ttl }}
     cleanup_policies:
-{% for policy in default.cleanup_policies %}
+{% if team.policy is defined %}
+{% for policy in team.cleanup_policies %}
       - {{ policy }}
 {% endfor %}
+{% else %}
+{% for policy in value.cleanup_policies %}
+    - {{ policy }}
+{% endfor %}
+{% endif %}
+{% if key == 'apt' %}
+    distribution: {{ team_proxy_repo.distribution if team_proxy_repo.distribution is defined else value.distribution }}
+    keypair: {{ team_proxy_repo.keypair if team_proxy_repo.keypair is defined else value.keypair }}
+    passphrase: {{ team_proxy_repo.passphrase if team_proxy_repo.passphrase is defined else value.passphrase }}
+{% endif %}
+{% if key == 'docker' %}
+    force_basic_auth: {{ team_proxy_repo.force_basic_auth if team_proxy_repo.force_basic_auth is defined else value.force_basic_auth }}
+    v1_enabled: {{ team_proxy_repo.v1_enabled if team_proxy_repo.v1_enabled is defined else value.v1_enabled }}
+    http_port: {{ team_proxy_repo.http_port if team_proxy_repo.http_port is defined else value.http_port }}
+    sub_domain: {{ team_proxy_repo.sub_domain if team_proxy_repo.sub_domain is defined else value.sub_domain }}
+{% endif %}
+{% if key == 'raw' %}
+    contentDisposition: {{ team_proxy_repo.contentDisposition if team_proxy_repo.contentDisposition is defined else value.contentDisposition }}
+{% endif %}
 {% endfor %}
 {% endfor %}
-{% endfor %} #}
+{% endfor %}
